--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 /* The switch */
 .switch {
     position: relative;
-    display: inline-block;
-    width: 45px;
+    display: flex;
+    width: auto;
     height: 22px;
 }
 
@@ -71,7 +71,20 @@
 }
 
 .slider-text h1 {
-    font-size: 40px;
+    font-size: 4em;
+    color: #fff;
+    line-height: 1.1;
+    font-weight: 700;
+    font-style: italic;
+    color: transparent;
+    -webkit-text-fill-color: transparent;
+    /* Will override color (regardless of order) */
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: #fff;
+}
+
+.slider-text2 h1 {
+    font-size: 3em;
     color: #fff;
     line-height: 1.1;
     font-weight: 700;
@@ -256,14 +269,93 @@
     background-size: cover;
 }
 
+#division .block-6 {
+    background: url(../img/img-one.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-7 {
+    background: url(../img/img-two.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-8 {
+    background: url(../img/img-three.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-9 {
+    background: url(../img/img-four.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-10 {
+    background: url(../img/img-five.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-11 {
+    background: url(../img/img-four.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
+#division .block-12 {
+    background: url(../img/img-five.jpeg) no-repeat 50% 50%;
+    background-size: cover;
+}
+
 #division .block-1 h1,
 #division .block-3 h1,
-#division .block-5 h1 {
+#division .block-5 h1,
+#division .block-7 h1,
+#division .block-9 h1,
+#division .block-11 h1 {
     bottom: 0;
     right: -60px;
 }
 
 #division .block-2 h1,
-#division .block-4 h1 {
+#division .block-4 h1,
+#division .block-6 h1,
+#division .block-8 h1,
+#division .block-10 h1,
+#division .block-12 h1 {
     right: -60px;
+}
+
+/* ########################################## */
+#about {
+    padding-top: 3rem;
+    marrgin-top: -3rem;
+}
+
+/* ######################################### */
+/*scroll up*/
+#myBtn {
+    background-color: #028784;
+    height: 50px;
+    width: 50px;
+    border: 0px solid rgb(255, 255, 255);
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: none;
+    z-index: 99;
+}
+
+#myBtn:hover {
+    background-color: rgb(0, 100, 100);
+}
+
+.butonUP {
+    font-size: 2em;
+    justify-content: center;
+}
+
+.owl-carousel .item {
+    width: 50px;
+    height: 50px;
+    background-color: black;
 }
