--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* #################################################### */
+html {
+    scroll-behavior: smooth;
+}
+
 /* The switch */
 .switch {
     position: relative;
@@ -14,9 +18,23 @@
     height: 0;
 }
 
+.darktogel {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 2.2em;
+    color: rgba(255, 255, 255, 0.767);;
+}
 /* #################################################### */
 
 /* carousel */
+
+.carousel {
+    padding-top: 0 !important;
+    margin-top: -3em !important;
+}
 
 .carouselbtn {
     font-size: 2em;
@@ -41,7 +59,7 @@
 
 .gbr {
     width: 100%;
-    height: calc(100vh - var(--header-height));
+    height: 100vh;
     object-fit: cover;
 }
 
@@ -84,7 +102,7 @@
 }
 
 .slider-text2 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     color: #fff;
     line-height: 1.1;
     font-weight: 700;
@@ -276,8 +294,14 @@
 
 #about {
     padding-top: 3rem;
-    marrgin-top: -3rem;
+    margin-top: -3rem;
 }
+
+#history {
+    padding-top: 3rem;
+    margin-top: -3rem;
+}
+
 
 /* ######################################### */
 /*scroll up*/
@@ -293,6 +317,7 @@
     cursor: pointer;
     display: none;
     z-index: 99;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 #myBtn:hover {
@@ -383,3 +408,7 @@
     background: url(../img/img-five.jpeg) no-repeat 50% 50%;
     background-size: cover;
 }
+
+/* .owl-carousel .block .text-dark {
+    color:#028784;
+} */
