--- a/css/style.css
+++ b/css/style.css
@@ -199,16 +199,6 @@ html {
     .owl-one .block-12 h1 {
         right: -23%;
     }
-
-    /* #leader .container {
-        padding-left: 0 !important ;
-    }
-    #division .container {
-        padding-right: 0 !important;
-    } */
-    .work {
-        margin-right: -0.2em !important;
-    }
 }
 
 /* ############################################## */
@@ -530,8 +520,8 @@ html {
 }
 
 .testimony-wrap .user-img {
-    width: 80px;
-    height: 80px;
+    width: 5em;
+    height: 5em;
     position: relative;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
@@ -539,15 +529,8 @@ html {
     border-radius: 50%;
 }
 
-.testimony-wrap .position {
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.7);
-    text-align: left;
-}
-
 .testimony-wrap .name {
     font-weight: 500;
-    font-size: 20px;
     margin: 0 1em 0 0 !important;
     color: #fff;
     font-family: 'Karla', sans-serif !important;
@@ -585,3 +568,56 @@ html {
     box-shadow: 0px 30px 33px -41px rgba(0, 0, 0, 0.24);
 }
 
+.owl-carousel .owl-dots {
+    text-align: center;
+    margin-top: 1.5em;
+}
+
+.owl-carousel .owl-dots .owl-dot {
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    border-radius: 50%;
+    background: #e6e6e600;
+    position: relative;
+}
+
+.owl-carousel .owl-dots .owl-dot:after {
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: 0;
+    bottom: 0;
+    width: 14px;
+    height: 14px;
+    content: '';
+    border: 1px solid #e6e6e6;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
+}
+.owl-dots {
+    text-align: center;
+}
+
+.owl-dots .owl-dot {
+    width: 10px;
+    height: 10px;
+    margin: 5px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0.1);
+}
+.owl-dots .owl-dot.active {
+    background: #028784 !important;
+}
+
+/* ############################################# */
+
+.bg-light,
+.bg-white,
+.text-dark,
+.darktogel,
+#header {
+    transition: 1s;
+}
