--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,11 @@ html {
     font-style: italic;
     color: transparent;
     -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
     /* Will override color (regardless of order) */
     -webkit-text-stroke-width: .5px;
+    -moz-text-stroke-width: .5px;
+    -moz-text-stroke-color: #fff;
     -webkit-text-stroke-color: #fff;
 }
 
@@ -205,6 +208,12 @@ html {
         visibility: visible;
     }
 
+
+    .pideo {
+        width: 100%;
+        height: 100%;
+    }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -300,6 +309,11 @@ html {
 
     #about .container .col-6 {
         width: 25%;
+    }
+
+    .pideo {
+        width: 100%;
+        height: 768px;
     }
 }
 
@@ -446,6 +460,7 @@ html {
 
 #myBtn:hover {
     background-color: rgb(0, 100, 100);
+    transition: 1s;
 }
 
 .butonUP {
@@ -744,4 +759,75 @@ html {
     font-weight: 600;
 }
 
+.pideo {
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
+.footer {
+    background-color: #028784;
+}
+
+.footer-social li {
+    list-style: none;
+    margin: 0 10px 0 0;
+    display: inline-block;
+}
+
+.footer-social li a {
+    height: 50px;
+    width: 50px;
+    display: block;
+    float: left;
+    background: #005c5a;
+    border-radius: 50%;
+    position: relative;
+    -webkit-transition: background 1s ease-out;
+    -moz-transition: background 1s ease-out;
+    -o-transition: background 1s ease-out;
+    transition: background 1s ease-out;
+}
+
+.ig:hover {
+    background: #d6249f;
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background-position:100px;  
+}
+
+.yt:hover {
+    background: #ff0000;
+    background-position:100px; 
+}
+
+.email:hover {
+    background: #EA4335;
+    background-position:100px; 
+}
+
+.footer-social li a i {
+    position: absolute;
+    font-size: 18px;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.footericon {
+    font-size: 15px;
+}
+
+.credit {
+    background-color: #005c5a;
+    height: 4rem;
+    line-height: 2rem;
+}
+
+.credit span i {
+    font-size: 0.8rem;
+}
+
+.credit p {
+    color: rgb(199, 199, 199);
+}
